# fakecc

./: .gitignore  CMakeLists.txt  README.md  fakecc_plan.md  plan_04_renaming.md
.github/workflows/: ci.yml
examples/: return42.c
include/fakecc/: ast.h  cfg.h  codegen.h  common.h  domtree.h  emit.h  ir.h  lexer.h  mem2reg.h  opt.h  parser.h  phi.h  regalloc.h  scalar_opt.h  sema.h  token.h
src/: ast.c  cfg.c  codegen.c  common.c  domtree.c  emit.c  ir.c  lexer.c  main.c  mem2reg.c  opt.c  parser.c  regalloc.c  scalar_opt.c  sema.c
test/: CMakeLists.txt  test_framework.c  test_framework.h
test/e2e/: arith_add.c  arith_complex.c  arith_div.c  arith_left_sub.c  arith_mod.c  arith_mul.c  arith_neg.c  arith_paren.c  arith_prec.c  bad_assign_nonlvalue.c  bad_assign_undeclared.c  bad_expr_dangling_op.c  bad_expr_empty.c  bad_expr_unclosed_paren.c  bad_no_return.c  bad_redecl.c  bad_undeclared.c  bad_use_before_decl.c  return0.c  return255.c  return42.c  run_e2e.sh  var_assign_expr.c  var_chain.c  var_decl.c  var_expr.c  var_init.c  var_reassign.c  var_self.c  var_two.c
test/unit/: test_cfg.c  test_codegen.c  test_domtree.c  test_emit.c  test_ir.c  test_lexer.c  test_mem2reg.c  test_opt.c  test_parser.c  test_phi.c  test_regalloc.c  test_renaming.c  test_sema.c
